# paper_read

./: .gitignore  README.md  TECH_STACK_AND_STRUCTURE.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
agent/: package.json  tsconfig.json
agent/src/: index.ts
agent/src/adapters/: storage.client.ts
agent/src/config/: env.ts
agent/src/core/: job.ts  workflow.ts
agent/src/prompts/: index.ts
agent/src/runtime/: worker-loop.ts
agent/src/services/: job-runner.ts  logger.ts
agent/src/steps/: loadProjectContext.step.ts  parsePdf.step.ts  screenAbstract.step.ts
apps/desktop/: package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  layout.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/.cargo/: config.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
backend/: package.json  tsconfig.json
backend/src/: app.ts  server.ts
backend/src/config/: env.ts
backend/src/db/: client.ts
backend/src/lib/: logger.ts  pagination.ts
backend/src/middleware/: index.ts
backend/src/plugins/: index.ts
backend/src/routes/: index.ts
devDoc/: 2026-04-02-screening-v1.md  2026-04-06-local-sidecar-mvp.md
docs/: paper_reader_requirements.md  paper_reader_technical_design_typescript.md
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/src/hooks/: useAppReady.ts
web/src/pages/: HomePage.tsx  ScreeningWorkspacePage.tsx
web/src/router/: index.tsx
web/src/services/: http.ts
web/src/styles/: global.css
(+92 files in other folders)
