[package]
name = "paper-read"
version = "0.1.0"
description = "Local-first AI paper research workspace"
authors = ["paper-read"]
edition = "2021"
license = ""
repository = ""

[lib]
name = "paper_read_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
